<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ecomerce.rwm.projetopdm.FaleConoscoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/txt_faleConosco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_fale_conosco"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_titulo"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/edt_email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/edt_email"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_titulo"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_titulo"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo" />

    <TextView
        android:id="@+id/txt_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_descricao"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_titulo"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/edt_titulo"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/edt_titulo" />

    <EditText
        android:id="@+id/edt_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_descricao"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_descricao" />

    <Button
        android:id="@+id/btn_fale_conosco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_enviar"
        app:layout_constraintLeft_toLeftOf="@+id/edt_descricao"
        app:layout_constraintRight_toRightOf="@+id/edt_descricao"
        app:layout_constraintTop_toBottomOf="@+id/edt_descricao" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_email"
        app:layout_constraintLeft_toLeftOf="@+id/txt_faleConosco"
        app:layout_constraintRight_toRightOf="@+id/txt_faleConosco"
        app:layout_constraintTop_toBottomOf="@+id/txt_faleConosco"
        app:layout_constraintHorizontal_bias="0.501" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_email"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_email" />

</android.support.constraint.ConstraintLayout>
