<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ecomerce.rwm.projetopdm.LoginUsuActivity"
    tools:showIn="@layout/activity_login_usu">

    <TextView
        android:id="@+id/txt_login_usu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_login_adm"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email_login_usu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_email"
        app:layout_constraintLeft_toLeftOf="@+id/txt_login_usu"
        app:layout_constraintRight_toRightOf="@+id/txt_login_usu"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_usu" />

    <TextView
        android:id="@+id/txt_senha_login_usu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_senha"
        app:layout_constraintLeft_toLeftOf="@+id/edt_email_login_usu"
        app:layout_constraintRight_toRightOf="@+id/edt_email_login_usu"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login_usu" />

    <EditText
        android:id="@+id/edt_email_login_usu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_login_usu"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_email_login_usu"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_email_login_usu"
        app:layout_constraintHorizontal_bias="0.504" />

    <EditText
        android:id="@+id/edt_senha_login_usu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_senha_login_usu"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_senha_login_usu"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/txt_senha_login_usu" />

    <Button
        android:id="@+id/btn_login_usu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_enviar"
        app:layout_constraintLeft_toLeftOf="@+id/edt_senha_login_usu"
        app:layout_constraintRight_toRightOf="@+id/edt_senha_login_usu"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha_login_usu" />
</android.support.constraint.ConstraintLayout>
